# pyCERR

./: .gitignore  .readthedocs.yaml  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: _version_tmp.py  publish.yml  python-package.yml
cerr/: dvh.py  multiViewHelper.py  plan_container.py  viewer.py
cerr/ai/: createSessionDir.py
cerr/ai_models/: __init__.py  install_utils.py  run_utils.py
cerr/ai_models/post/: CT_LungOAR_incrMRRN.py
cerr/ai_models/prep/: CT_LungOAR_incrMRRN.py
cerr/contour/: contour_processing.py  rasterseg.py  structure_consensus.py
cerr/dataclasses/: beams.py  dcm_cerr_name_map.json  deform.py  dose.py  header.py  imrt.py  scan.py  scan_info.py  structure.py  uromt.py
cerr/datasets/: __init__.py
cerr/datasets/convolutional_filter_settings/: LoG_filter.json  Rot_inv_laws_energy_filter.json  gabor_filter.json  mean_filter.json
cerr/datasets/radiomics_phantom/: README_LICENSE.txt
cerr/datasets/radiomics_settings/: original_settings.json
cerr/dcm_export/: iod_helper.py  reg_iod.py  rtdose_iod.py  rtplan_iod.py  rtstruct_iod.py  scan_iod.py
cerr/imrtp/: README_IMRTP.md  __init__.py  imrtp.py  imrtp_gui.py  imrtp_problem.py  lattice.py  portpy_bridge.py  pyradplan_bridge.py
cerr/imrtp/dosecalc/: __init__.py  influence.py  montecarlo.py  qib.py  qib_data.py  raytrace.py  recalc.py  rtplan.py
cerr/mri_metrics/: dce_mri.py
cerr/radiomics/: filters.py  first_order.py  gray_level_cooccurence.py  ibsi1.py  neighbor_gray_level_dependence.py  neighbor_gray_tone.py  preprocess.py  quantize.py  run_length.py  shape.py  size_zone.py  textureFilters.py  textureUtils.py  texture_filters.py  texture_utils.py  vector_elasticity.py
cerr/registration/: ants_reg.py  plastimatch_ct_ct_intra_pt.txt  register.py
cerr/registration/settings/: plastimatch_ct_ct_intra_pt.txt  plastimatch_ct_ct_intra_pt_affine.txt  plastimatch_ct_ct_intra_pt_bsplines.txt  plastimatch_ct_ct_intra_pt_w_masks_affine.txt  plastimatch_ct_ct_intra_pt_w_masks_bsplines.txt
cerr/roe/: __init__.py  dosimetric_models.py  functionalForms.py  roe_gui.py
cerr/roe/model_parameters/: Bronchial stenosis (cox).json  Bronchial stenosis (logistic).json  Bronchial toxicity  (Grade 3+).json  Bronchial toxicity (Grade 5).json  Esophagitis (Huang).json  Esophagitis (Wijsman).json  (+5 more)
cerr/scripts/: RP-radiomics_parallel_debug.py  ai_segment_tumor_CMEDL.py  auto_register_segment_MR_Pancreas_OARs.py  batch_convert_dicom_to_nii.py  batch_extract_radiomics.py  batch_visualize_scan_seg.py  bladder_radiomics.py  capture_gtv_snaps.py  compare_uromt_matlab.py  compare_uromt_metric.py  demo_imrtp_gui.py  dump_all_tags.py  export_to_nii.py  extract_radiomics_T2_MR.py  extract_radiomics_from_dicom.py  extract_radiomics_from_phantom.py  interp_upsampled_seg.py  preprocess_heart_substructs.py  profile_uromt.py  register_CT_with_NM.py  register_and_visualize.py  register_hn.py  register_in_ex_parallel.py  register_inhale_exhale.py  run_qib_from_rtplan.py  structure_consensus_example.py  sts_radiomics.py  sweep_uromt_sigma.py  thyroid_radiomics.py  zscore_mri.py
cerr/segmentation/: models.py
cerr/uromt/: MATLAB_COMPARISON.md  __init__.py  analyze.py  config.py  data.py  export.py  numerics.py  solver.py  viz.py
cerr/utils/: aiPipeline.py  ai_pipeline.py  bbox.py  custom_colormaps.py  identifyScan.py  imageProc.py  image_proc.py  interp.py  mask.py  statistics.py  statisticsUtils.py  statistics_utils.py  uid.py
cerr/viewer/: API_pycerr_gui.md  README_pycerr_gui.md  __init__.py  cerr_colormaps.py  pycerr_gui.py  pycerr_napari.py  pycerr_nbviewer.py
docs/: cerr.ai.rst  cerr.contour.rst  cerr.dataclasses.rst  cerr.datasets.rst  cerr.dcm_export.rst  cerr.imrtp.dosecalc.rst  cerr.imrtp.rst  cerr.mri_metrics.rst  cerr.radiomics.rst  cerr.registration.rst  cerr.roe.rst  cerr.rst  cerr.utils.rst  cerr.viewer.rst  conf.py  index.rst  modules.rst  requirements.txt  tests.rst
docs_old/: conf.py
notebooks/: urOMT_demo.ipynb  urOMT_fast_settings.json
tests/: IBSI1tests.py  IBSI2Phase1Tests.py  IBSI2Phase2Tests.py  IBSI2phase1Tests.py  README.md  test_IBSI1_features.py  test_IBSI2_features.py  test_IBSI2_filters.py  test_ants_registration.py  test_dcm_export_reg.py  test_dcm_export_rtstruct.py  test_dcm_reg_import.py  test_dicom_import_robustness.py  test_dicom_load.py  test_dvh.py  test_gui_disprange_3d.py  test_gui_fast_alpha.py  test_gui_fused_dose.py  test_gui_isodose_levels.py  test_gui_plane_labels.py  test_gui_upsample.py  test_h5_roundtrip.py  test_ibsi1_features.py  test_ibsi2_features.py  test_ibsi2_filters.py  test_imrtp.py  test_lattice.py  test_module_imports.py  test_nii_export_import.py  test_portpy_bridge.py  test_portpy_bridge_phase2.py  test_portpy_bridge_phase3.py  test_portpy_bridge_phase4.py  test_pyradplan_bridge.py  test_rasterization.py  test_roe_models.py  test_uromt.py
(+992 files in other folders)
