[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pycerr"
dynamic = ["version"]
authors = [
  { name="Aditya P. Apte", email="aptea@mskcc.org" },
  { name="Aditi Iyer", email="iyera@mskcc.org" },
  { name="Eve LoCastro", email="locastre@mskcc.org" },
  { name="CERR User community", email="cerr-forum@googlegroups.com"},
  { name="Joseph O. Deasy", email="deasyj@mskcc.org" }
]
description = "A Computational Environment for Radiological Research"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'pydicom',
    'python-dateutil',
    'scipy',
    'h5py',
    'pandas',
    'SimpleITK',
    'nibabel',
    'scikit-learn',
    'scikit-image',
    'PyWavelets',
    'shapelysmooth',
    'matplotlib <= 3.9.0',
    'ipywidgets'
]

[project.urls]
"Homepage" = "https://github.com/cerr/pyCERR"
"Bug Tracker" = "https://github.com/cerr/pyCERR/issues"

[project.optional-dependencies]
napari = [
    "napari[all]",
]

[tool.setuptools_scm]
version_file = "cerr/_version.py"
