[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pycerr"
dynamic = ["version"]
authors = [
  { name="Aditya P. Apte", email="aptea@mskcc.org" },
  { name="Aditi Iyer", email="iyera@mskcc.org" },
  { name="Eve LoCastro", email="locastre@mskcc.org" },
  { name="CERR User community", email="cerr-forum@googlegroups.com"},
  { name="Joseph O. Deasy", email="deasyj@mskcc.org" }
]
description = "A Computational Environment for Radiological Research"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]
dependencies = [
    'scipy',
    'pydicom',
    'python-dateutil',
    'h5py',
    'pandas',
    'SimpleITK',
    'nibabel',
    'scikit-learn',
    'scikit-image',
    'PyWavelets',
    'shapelysmooth',
    'matplotlib <= 3.9.0',
    'ipywidgets',
    'surface-distance',
    'itk-strain',
    # Desktop Qt viewer (cerr.viewer.pycerr_gui): PyQt5 is the Qt binding;
    # pyvista/pyvistaqt drive the GPU-accelerated 3D view (vtk is pulled in
    # transitively by pyvista).
    'PyQt5',
    'pyvista',
    'pyvistaqt'
]

[project.urls]
"Homepage" = "https://github.com/cerr/pyCERR"
"Bug Tracker" = "https://github.com/cerr/pyCERR/issues"

[project.optional-dependencies]
napari = [
    "napari[all]",
    "napari-animation"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.exclude-package-data]
# Test-only datasets (mirrors MANIFEST.in) - keep them out of the wheel.
# The notebook-facing datasets (radiomics_phantom_dicom, sample_ct,
# radiomics_settings, convolutional_filter_settings) are retained.
"cerr.datasets" = [
    "ibsi_radiomics_dicom/*",
    "ibsi_radiomics_dicom/**/*",
    "reference_values_for_tests/*",
    "reference_values_for_tests/**/*",
    # head_and_neck is downloaded on demand (fetch_sample_data); keep it out of
    # the wheel. dosimetric_model_test_data stays bundled (NTCP notebook).
    "sample_ct/head_and_neck/*",
    "sample_ct/head_and_neck/**/*",
]

[tool.setuptools_scm]
version_file = "cerr/_version.py"
# Drop the +g<sha> local segment so dev builds are uploadable to TestPyPI
# (PyPI rejects local versions). A clean tag still yields e.g. 0.7.0.
local_scheme = "no-local-version"

[tool.ruff.lint]
select = ["NPY201"]
